# tsppp

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile
notebooks/: tutorial.ipynb
scripts/: evaluate.py  generate_training_data.py  train_cprm.py  train_ddpm.py
scripts/config/: generate_training_data.yaml  train_cprm.yaml  train_ddpm.yaml
scripts/config/data/: cprm.yaml  ddpm.yaml
scripts/config/trainer/: cprm.yaml  ddpm.yaml
scripts/config/unet/: cprm.yaml  unet_1d_condition.yaml
scripts/config_eval/: default.yaml
scripts/config_eval/map_creator/: csm.yaml  in2d.yaml  large_obs.yaml  many_obs.yaml  standard.yaml
scripts/config_eval/solver/: cprm_default.yaml  diffuser_default.yaml  prm_default.yaml  prm_gt.yaml  tspdiffuser_default.yaml
src/tsppp/: viz.py
src/tsppp/data/: data_generator.py  dataset.py  map_creator.py  utils.py
src/tsppp/models/: cprm.py  encoder.py  unet_1d_condition.py
src/tsppp/pipelines/: __init__.py  cprm_pipeline.py  ddpm1d_pipeline.py  guidance.py  utils.py
src/tsppp/planners/: graph_algos.py  graph_utils.py  tsp_solver.py
src/tsppp/trainers/: cprm_trainer.py  ddpm_trainer.py
tests/: test_cprm.py  test_data.py  test_ddpm.py  test_prm.py
tests/test_dataset.db/: 3c55a91a2bed4d478fea111c66b59100-0.parquet
